CMAKE_MINIMUM_REQUIRED(VERSION 2.12)
PROJECT(live360-WebRTC-library)

FIND_PACKAGE(Boost REQUIRED COMPONENTS system thread program_options)

# FILE(GLOB SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
AUX_SOURCE_DIRECTORY(. DIR_SRC)

SET(DIR_SRC
    ${DIR_SRC}
)

ADD_LIBRARY(live360WebRTC SHARED ${DIR_SRC})

TARGET_COMPILE_DEFINITIONS(live360WebRTC PUBLIC _ENABLE_HEVC_TILES_MERGER_ ENABLE_WEBRTC360)

TARGET_LINK_LIBRARIES(live360WebRTC Boost::system Boost::thread Boost::program_options 360SCVP)
