CMAKE_MINIMUM_REQUIRED(VERSION 2.12)
PROJECT(live360-WebRTC-sample)

FIND_PACKAGE(Boost REQUIRED COMPONENTS system thread program_options)
FILE(GLOB SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/..)

LINK_DIRECTORIES(../build)

ADD_EXECUTABLE(sample ${SOURCES})

TARGET_COMPILE_DEFINITIONS(sample PUBLIC _ENABLE_HEVC_TILES_MERGER_ ENABLE_WEBRTC360)

TARGET_LINK_LIBRARIES(sample live360WebRTC Boost::system Boost::thread Boost::program_options)
